# bbhk

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_QUICK_START.md  Dockerfile  Dockerfile.simple  Makefile  README-QUICK-START.md  README.md  TODO.md  VULNERABILITY_RESEARCH_TEMPLATE.md  docker-compose.override.yml  docker-compose.qdrant.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  tools-cli  tools-cli-venv
.claude/commands/: bug-bounty.md
analysis/: top_programs_executable_strategy.py
config/: mcp-wrapper-config.json  platforms.yaml  qdrant_mcp_config.json  rules.yaml  system.yaml
config/qdrant/: config.yaml
config/schemas/: validation.yaml
core/: campaign_lifecycle.py
core/config/: system.yaml
core/orchestrator/: orchestrator.py
core/researcher/: integration.py  pattern_extractor.py  report_miner.py  variant_generator.py
data/vulnerabilities/: common_patterns.json
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf  package.json
docker/mcp-qdrant/: Dockerfile
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docs/: ADVANCED-VULNERABILITY-RESEARCH-METHODOLOGY.md  API-REFERENCE.md  CLICKABLE-CARDS-IMPLEMENTATION-COMPLETE.md  COMPLETE-FAKE-DATA-ELIMINATION-REPORT.md  CRITICAL-FAKE-DATA-CLEANUP-REPORT.md  DATA-INTEGRITY-FINAL-REPORT.md  ENTERPRISE-API-CLEANUP-COMPLETE.md  FAKE-DATA-ORIGIN-INVESTIGATION.md  FINAL-CLEANUP-OPTIMIZATION-REPORT.md  FINAL-HACKERONE-INTEGRATION-REPORT.md  FIREBLOCKS-MPC-COMPLETE-REPORT.md  HACKER-API-COMPLETE-GUIDE.md  HACKER-API-ONLY.md  HACKER-QUICKSTART.md  HACKERONE-API-COMPLETE-ANALYSIS.md  HACKERONE-API-DATA-SOURCES-ANALYSIS-CORRECTED.md  HACKERONE-GITHUB-DISCOVERY-REPORT.md  HACKERONE-ROI-ANALYSIS-2025.md  HACKERONE_DATA_COMPLETENESS_ANALYSIS.md  INDEX.md  MCP-COMPLETE-GUIDE.md  PORTAL-VALIDATION-SUCCESS.md  POSTGRESQL-MIGRATION-COMPLETE.md  PROGRAM-ANALYSIS-GUIDE.md  PROGRAM-FIELDS-AVAILABLE.md  QDRANT_INTEGRATION.md  README.md  SYSTEM-STATUS-COMPLETE.md  hackerone-api-research.md
hacks/: HACKERONE_PROGRAMS_SUMMARY.md  README-ORGANIZATION.md  analyze_fast_critical.py  generate_hackerone_grok4_data.py
hacks/8x8-bounty/: COMPLETE-8X8-BOUNTY-DATA.md
hacks/_scan_programs/: .env.example  ENHANCED_SCANNER_V2.1_FINAL.md  FINAL_IMPROVEMENTS_SUMMARY.md  GOLDMAN_SACHS_MATURITY_ANALYSIS.md  README.md  (+16 more)
migration/: fetch_real_data.py  fetch_real_data_fixed.py
scripts/: add_missing_columns.py  analyze_bugbounty_roi.py  analyze_specific_programs.py  api_data_validator.py  apply_migration.py  archive-old-files.sh  automated_recon_workflow.sh  check_and_submit_report.py  check_report_3304094.py  clean-frontend-duplicates.js  cleanup-enterprise-api.sh  complete_sqlite_consolidation.py  configure-hostname.sh  consolidate_memory.py  create_nuclei_template.py  data_integrity_validator.py  deep-dive-coinbase-api.py  docker-setup.sh  explore-coinbase-hacker-api.py  extract_enhanced_watson_data.py  fetch-hacker-api-programs.py  fetch_comprehensive_hackerone_data.py  fetch_fireblocks_data.py  fetch_program_metrics.py  find_code_audit_programs.py  find_code_audit_programs_postgres.py  fix-frontend-data-display.js  fix-qdrant-mcp-vector.py  fix-qdrant-mcp.py  fix_qdrant_config.py  fix_qdrant_mcp.py  get-coinbase-structured-scopes.py  get_report_3303358.py  get_report_3304131.py  hybrid_data_manager.py  install_additional_bbtools.sh  install_focused_tools.sh  install_focused_tools_kali.sh  install_tool_dependencies.py  integrate_tools_with_vulns.py  (+34 more)
src/: __init__.py  __main__.py  main.py
tests/: test-campaign-lifecycle-system.py  test_api.py  test_config.py  test_database.py  test_discovery.py  test_scope_frontend.html
(+251 files in other folders)
